[project]
name = "cassini-starter"
version = "0.1.0"
description = "Tilebox Starter Project for Cassini Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "tilebox-workflows>=0.35.0",
    "tilebox-storage>=0.35.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
